// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactInformation component should renders correctly 1`] = `
<div
  className="contact-info-message-content"
>
  <Styled(RichText)
    dataLocator="contact_disclaimer_info"
    richTextHtml="<h1>Account Information</h1>"
  />
</div>
`;

exports[`ContactInformation component should renders correctly when no arguments are passed 1`] = `
<div
  className="contact-info-message-content"
>
  <Styled(RichText)
    dataLocator="contact_disclaimer_info"
    richTextHtml=""
  />
</div>
`;
